src/components/PortfolioAppList.css
.PortfolioAppList {
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: relative;
    flex: 1;
    height: 100%;
    margin: 1.5rem;
}

.labels-container {
    display: flex;
    justify-content: space-between;
    width: 100%;
    height: 100%;
    z-index: 2;
    pointer-events: none;
}

.LeftSkillLabels, .RightSkillLabels {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 1rem;
    /* flex: 1; */
    overflow-y: scroll;
    pointer-events: auto;
}

.LeftSkillLabels::-webkit-scrollbar, .RightSkillLabels::-webkit-scrollbar {
    display: none;
}

.LeftSkillLabels {
    align-items: flex-start;
}

.RightSkillLabels {
    align-items: flex-end;
}

.RightSkillLabels h3 { text-align: right; }

.PortfolioSkillLabel {
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: var(--portfolio-border-radius);
    transition: color 0.2s ease-in;
    will-change: color;
}

.PortfolioSkillLabel h3 {
    margin: 0;
    text-align: center;
    font-size: 1.4rem;
    font-weight: lighter;
    cursor: pointer;
    transition: 0.2s;
}

.PortfolioSkillLabel.active {
    h3 {
        color: light-dark(var(--color-darkest), var(--color-lightest));
    }
}
.PortfolioSkillLabel.inactive {
    h3 {
        color: light-dark(var(--color-light-gray), var(--color-dark-gray));
    }
}

.AppList {
    position: absolute;
    display: flex;
    justify-content: center;
    overflow-y: scroll;
    top: 0;
    margin: 1rem auto 0;
    width: 100%;
    max-height: 100%;
    z-index: 1;
}

.LineContainer {
    svg, svg > path {
        transition: stroke 0.2s ease-in;
        will-change: stroke;
    }
    svg.active > path {
        stroke: light-dark(var(--color-darkest), var(--color-lightest));
    }
    svg.inactive > path {
        stroke: light-dark(var(--color-light-gray), var(--color-dark-gray));
    }
}
/* 
 */

.PortfolioApps {
    display: grid;
    position: relative;
    grid-template-columns: repeat(auto-fit, minmax(6rem, 1fr));
    grid-gap: 4rem;
    width: 60%;
    place-items: center;
    margin: 0 auto;
}

.PortfolioAppWrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: visible;
    transition: margin-bottom 0.3s ease-in-out;
}
.PortfolioAppContent {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 0.5rem;
    border: var(--portfolio-border);
    transition: 0.2s;
}

@media (max-width: 1023px) {
    .labels-container h3 { max-width: 128px; }
}

/* Mobile Styles */
@media (max-width: 768px) {

    .PortfolioAppList {
        margin: 1rem 2rem;
        gap: 1.5rem;
    }

    .labels-container {
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: flex-start;
        margin: 0 0.5rem;
        gap: 0.5rem;
        max-width: 380px;
        margin: auto;
    }

    .LeftSkillLabels, .RightSkillLabels {
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
        margin: 0;
        gap: 0.5rem;
    }

    .PortfolioSkillLabel {
        border: var(--portfolio-border);
        padding: 0.4rem 1rem;
    }

    .PortfolioSkillLabel h3 {
        font-size: 1.2rem;
        cursor: pointer;
    }

    .AppList {
        position: initial;
        flex-direction: column;
        /* align-items: center; */
        max-width: 100%;
        gap: 1.5rem;
    }

    .PortfolioApps {
        justify-content: space-evenly;
        width: 99%; /* Clipping bug with 100% */
    }

}

@media (max-width: 426px) {

    .labels-container {
        justify-content: center;
    }
}

